crates/swc_ecma_react_compiler/tests/fixtures/upstream/fault-tolerance/error.var-declaration-and-ref-access/error.txt
Found 2 errors:

Todo: (BuildHIR::lowerStatement) Handle var kinds in VariableDeclaration

error.var-declaration-and-ref-access.ts:12:2
  10 |
  11 |   // Error: var declaration (Todo from BuildHIR)
> 12 |   var items = [1, 2, 3];
     |   ^^^^^^^^^^^^^^^^^^^^^^ (BuildHIR::lowerStatement) Handle var kinds in VariableDeclaration
  13 |
  14 |   // Error: reading ref during render
  15 |   const value = ref.current;

Error: Cannot access refs during render

React refs are values that are not needed for rendering. Refs should only be accessed outside of render, such as in event handlers or effects. Accessing a ref value (the `current` property) during render can cause your component not to update as expected (https://react.dev/reference/react/useRef).

error.var-declaration-and-ref-access.ts:15:16
  13 |
  14 |   // Error: reading ref during render
> 15 |   const value = ref.current;
     |                 ^^^^^^^^^^^ Cannot access ref value during render
  16 |
  17 |   return (
  18 |     <div>
